# steinertree-web-demo

./: Cargo.toml  Dockerfile
src/: geosteiner.rs  home_service.rs  lib.rs  main.rs  st_service.rs
src/html_files/: steinertree.html
static/: default.css  home.html  steinertree.html
